--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -46,9 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connection\ConnectionRequest.cs" />
     <Compile Include="Connection\ICommunicate.cs" />
-    <Compile Include="Game\IConvertable.cs" />
-    <Compile Include="Game\JsonConverter.cs" />
+    <Compile Include="Converter\IConvertable.cs" />
+    <Compile Include="Converter\JsonConverter.cs" />
     <Compile Include="Connection\SocketHandler.cs" />
     <Compile Include="Dal\IDataAccess.cs" />
     <Compile Include="Dal\DataManager.cs" />
@@ -58,12 +59,15 @@
     <Compile Include="Game\GameController.cs" />
     <Compile Include="Game\GameRequest.cs" />
     <Compile Include="Game\GoFishController.cs" />
+    <Compile Include="Model\Request.cs" />
     <Compile Include="Lobby\GameLobby.cs" />
     <Compile Include="Lobby\LobbyManager.cs" />
-    <Compile Include="RequestManager.cs" />
+    <Compile Include="GamePresenter.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="test\eventargObs.cs" />
+    <Compile Include="test\ObsCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
